Bugfix: hamburger didn't collapse

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -316,7 +316,6 @@ button:disabled {
 
     .container {
         position: relative;
-        height: calc(100vh - var(--header) - 25px);
     }
 
     #menu-button-label {
@@ -338,25 +337,25 @@ button:disabled {
         margin: 3px 0;
     }
 
-    #menu-button:checked ~ #menu-button-label .hamburger:nth-child(1) {
+    #menu-button:checked ~ .top #menu-button-label .hamburger:nth-child(1) {
         transform: translateY(6px);
         opacity: 0;
         transition: 0.5s ease-out;
     }
 
-    #menu-button:checked ~ #menu-button-label .hamburger:nth-child(3) {
+    #menu-button:checked ~ .top #menu-button-label .hamburger:nth-child(3) {
         opacity: 0;
         transform: translateY(-6px);
         transition: 0.5s ease-out;
     }
 
-    #menu-button:not(:checked) ~ #menu-button-label .hamburger:nth-child(1) {
+    #menu-button:not(:checked) ~ .top #menu-button-label .hamburger:nth-child(1) {
         transform: none;
         opacity: 1;
         transition: 0.5s ease-out;
     }
 
-    #menu-button:not(:checked) ~ #menu-button-label .hamburger:nth-child(3) {
+    #menu-button:not(:checked) ~ .top #menu-button-label .hamburger:nth-child(3) {
         opacity: 1;
         transform: none;
         transition: 0.5s ease-out;
@@ -373,7 +372,6 @@ button:disabled {
         left: 0;
         top: 0;
         height: calc(100% - var(--form-height) - 10px - 30px);
-        margin-bottom: 30px;
         box-sizing: border-box;
         background-color: #25272a;
     }
